--- a/resume.html
+++ b/resume.html
@@ -67,10 +67,7 @@
             <div class="row d-flex justify-content-center text-center">
               <div class="col-lg-8">
                 <h1>Resume</h1>
-                <p class="mb-0">Odio et unde deleniti. Deserunt numquam
-                  exercitationem. Officiis quo odio sint voluptas consequatur ut
-                  a odio voluptatem. Sit dolorum debitis veritatis natus
-                  dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+                <p class="mb-0"> Motivated SMK Budi Mulia graduate (Office Administration) proficient in document management, copywriting, design, and video editing. Seeking a challenging role where I can leverage my administrative skills and contribute to a team while continuing to learn and grow.</p>
               </div>
             </div>
           </div>
@@ -111,20 +108,22 @@
                 <h4>SMK Budi Mulia  Major in Office 
                   &amp; Administration</h4>
                 <h5>2017-2019</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>Qui deserunt veniam. Et sed aliquam labore tempore sed
+                <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+                <p>
+                  <!-- Qui deserunt veniam. Et sed aliquam labore tempore sed
                   quisquam iusto autem sit. Ea vero voluptatum qui ut
-                  dignissimos deleniti nerada porti sand markend</p>
+                  dignissimos deleniti nerada porti sand markend -->
+                </p>
               </div><!-- Edn Resume Item -->
 
               <div class="resume-item">
                 <h4>SMPN 219  &amp; Jakarta</h4>
                 <h5>2014 - 2017</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
                 <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae
                   reiciendis et quis Eius vel ratione eius unde vitae rerum
                   voluptates asperiores voluptatem Earum molestiae consequatur
-                  neque etlon sader mart dila</p>
+                  neque etlon sader mart dila</p> -->
               </div><!-- Edn Resume Item -->
 
             </div>
@@ -175,8 +174,7 @@
     <footer id="footer" class="footer dark-background">
       <div class="container">
         <h3 class="sitename">angeliadwig</h3>
-        <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni
-          eligendi fuga maxime saepe commodi placeat.</p>
+        <p>Good marketing makes the company look smart. Great marketing makes the customer feel smart.</p>
         <div class="social-links d-flex justify-content-center">
           <a href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08" title="Twitter"><i class="bi bi-twitter-x"></i></a>
           <a href="https://www.facebook.com/" title="facebook"><i class="bi bi-facebook"></i></a>
