--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Contact</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p class="mb-0">I'm always open to new opportunities and collaborations! Feel free to reach out - I'd love to hear from you.</p>
             </div>
           </div>
         </div>
@@ -133,8 +133,10 @@
 
         </div>
 
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
+        <form action="https://api.web3forms.com/submit"  method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
           <div class="row gy-4">
+  
+            <input type="hidden" name="access_key" value="8e5b6033-c8f5-4372-a8fa-4ece4c8b61e1">
 
             <div class="col-md-6">
               <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
@@ -151,6 +153,8 @@
             <div class="col-md-12">
               <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
             </div>
+
+            <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
             <div class="col-md-12 text-center">
               <div class="loading">Loading</div>
@@ -171,14 +175,14 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Personal</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">angeliadwig</h3>
+      <p>Your Vision, Our Creation.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href="" title="Facebook Profile"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener" title="Instagram Profile"><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/" title="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" title="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.snapchat.com/add/sharkyy02?share_id=lqRClWkt1_g&locale=en-IN" title="snapchat"><i class="bi bi-snapchat"></i></a>
+          <a href="https://www.linkedin.com/" title="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
