--- a/portfolio.html
+++ b/portfolio.html
@@ -252,7 +252,7 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">angeliadwig</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Building Brands, One Pixel at a Time.</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
