--- a/services.html
+++ b/services.html
@@ -171,7 +171,7 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">angeliadwig</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Less is More.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08" title="Twitter"><i class="bi bi-twitter-x"></i></a>
           <a href="https://www.facebook.com/" title="facebook"><i class="bi bi-facebook"></i></a>
