--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -158,11 +158,11 @@
       <h3 class="sitename">angeliadwig</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="" title="Twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="" title="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bi bi-instagram"></i></a>
-        <a href="" title="snapchat"><i class="bi bi-snapchat"></i></a>
-        <a href="" title="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/" title="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" title="Instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.snapchat.com/add/sharkyy02?share_id=lqRClWkt1_g&locale=en-IN" title="snapchat"><i class="bi bi-snapchat"></i></a>
+        <a href="https://www.linkedin.com/" title="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
