--- a/contact.html
+++ b/contact.html
@@ -1,219 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Contact</title>
+    <meta name="description" content>
+    <meta name="keywords" content>
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
-</head>
+    <!-- Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
+  </head>
 
-<body class="contact-page">
+  <body class="contact-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <header id="header" class="header d-flex align-items-center fixed-top">
+      <div
+        class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">angeliadwig</h1>
-      </a>
+        <a href="index.html" class="logo d-flex align-items-center">
+          <!-- Uncomment the line below if you also wish to use an image logo -->
+          <!-- <img src="assets/img/logo.png" alt=""> -->
+          <h1 class="sitename">angeliadwig</h1>
+        </a>
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
+        <nav id="navmenu" class="navmenu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
+          </ul>
+          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        </nav>
 
-    </div>
-  </header>
+      </div>
+    </header>
 
-  <main class="main">
+    <main class="main">
 
-    <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
-      <div class="heading">
-        <div class="container">
-          <div class="row d-flex justify-content-center text-center">
-            <div class="col-lg-8">
-              <h1>Contact</h1>
-              <p class="mb-0">I'm always open to new opportunities and collaborations! Feel free to reach out - I'd love to hear from you.</p>
+      <!-- Page Title -->
+      <div class="page-title" data-aos="fade">
+        <div class="heading">
+          <div class="container">
+            <div class="row d-flex justify-content-center text-center">
+              <div class="col-lg-8">
+                <h1>Contact</h1>
+                <p class="mb-0">I'm always open to new opportunities and
+                  collaborations! Feel free to reach out - I'd love to hear from
+                  you.</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <nav class="breadcrumbs">
-        <div class="container">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Contact</li>
-          </ol>
-        </div>
-      </nav>
-    </div><!-- End Page Title -->
+        <nav class="breadcrumbs">
+          <div class="container">
+            <ol>
+              <li><a href="index.html">Home</a></li>
+              <li class="current">Contact</li>
+            </ol>
+          </div>
+        </nav>
+      </div><!-- End Page Title -->
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
+      <!-- Contact Section -->
+      <section id="contact" class="contact section">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row gy-4">
-
-          <div class="col-md-6">
-            <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="200">
-              <i class="icon bi bi-geo-alt flex-shrink-0"></i>
-              <div>
-                <h3>Address</h3>
-                <p>Joglo Raya, Jakarta Barat 11640</p>
-              </div>
-            </div>
-          </div><!-- End Info Item -->
-
-          <div class="col-md-6">
-            <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="300">
-              <i class="icon bi bi-telephone flex-shrink-0"></i>
-              <div>
-                <h3>Call Me</h3>
-                <p>+62 878-8866-2684</p>
-              </div>
-            </div>
-          </div><!-- End Info Item -->
-
-          <div class="col-md-6">
-            <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="400">
-              <i class="icon bi bi-envelope flex-shrink-0"></i>
-              <div>
-                <h3>Email Us</h3>
-                <p>angeliadwigustianti@gmail.com</p>
-              </div>
-            </div>
-          </div><!-- End Info Item -->
-
-          <div class="col-md-6">
-            <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="500">
-              <i class="icon bi bi-share flex-shrink-0"></i>
-              <div>
-                <h3>Social Profiles</h3>
-                <div class="social-links">
-                  <a href="#"><i class="bi bi-twitter-x"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==""><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-skype"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Info Item -->
-
-        </div>
-
-        <form action="https://api.web3forms.com/submit"  method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
           <div class="row gy-4">
-  
-            <input type="hidden" name="access_key" value="8e5b6033-c8f5-4372-a8fa-4ece4c8b61e1">
 
             <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-            </div>
+              <div class="info-item d-flex align-items-center"
+                data-aos="fade-up" data-aos-delay="200">
+                <i class="icon bi bi-geo-alt flex-shrink-0"></i>
+                <div>
+                  <h3>Address</h3>
+                  <p>Joglo Raya, Jakarta Barat 11640</p>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
 
-            <div class="col-md-6 ">
-              <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-            </div>
+            <div class="col-md-6">
+              <div class="info-item d-flex align-items-center"
+                data-aos="fade-up" data-aos-delay="300">
+                <i class="icon bi bi-telephone flex-shrink-0"></i>
+                <div>
+                  <h3>Call Me</h3>
+                  <p>+62 878-8866-2684</p>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
 
-            <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-            </div>
+            <div class="col-md-6">
+              <div class="info-item d-flex align-items-center"
+                data-aos="fade-up" data-aos-delay="400">
+                <i class="icon bi bi-envelope flex-shrink-0"></i>
+                <div>
+                  <h3>Email Us</h3>
+                  <p>angeliadwigustianti@gmail.com</p>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
 
-            <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-            </div>
-
-            <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-
-              <button type="submit">Send Message</button>
-            </div>
+            <div class="col-md-6">
+              <div class="info-item d-flex align-items-center"
+                data-aos="fade-up" data-aos-delay="500">
+                <i class="icon bi bi-share flex-shrink-0"></i>
+                <div>
+                  <h3>Social Profiles</h3>
+                  <div class="social-links">
+                    <a
+                      href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08"
+                      title="Twitter"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.facebook.com/" title="facebook"><i
+                        class="bi bi-facebook"></i></a>
+                    <a
+                      href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                      title="Instagram"><i class="bi bi-instagram"></i></a>
+                    <a
+                      href="https://www.snapchat.com/add/sharkyy02?share_id=lqRClWkt1_g&locale=en-IN"
+                      title="snapchat"><i class="bi bi-snapchat"></i></a>
+                    <a href="https://www.linkedin.com/" title="linkedin"><i
+                        class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
 
           </div>
-        </form><!-- End Contact Form -->
 
-      </div>
+          <form action="https://api.web3forms.com/submit" method="post"
+            class="php-email-form" data-aos="fade-up" data-aos-delay="600">
+            <div class="row gy-4">
 
-    </section><!-- /Contact Section -->
+              <input type="hidden" name="access_key"
+                value="8e5b6033-c8f5-4372-a8fa-4ece4c8b61e1">
 
-  </main>
+              <div class="col-md-6">
+                <input type="text" name="name" class="form-control"
+                  placeholder="Your Name" required>
+              </div>
 
-  <footer id="footer" class="footer dark-background">
-    <div class="container">
-      <h3 class="sitename">angeliadwig</h3>
-      <p>Your Vision, Our Creation.</p>
-      <div class="social-links d-flex justify-content-center">
-        <a href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08" title="Twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="https://www.facebook.com/" title="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" title="Instagram"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.snapchat.com/add/sharkyy02?share_id=lqRClWkt1_g&locale=en-IN" title="snapchat"><i class="bi bi-snapchat"></i></a>
-          <a href="https://www.linkedin.com/" title="linkedin"><i class="bi bi-linkedin"></i></a>
-      </div>
+              <div class="col-md-6 ">
+                <input type="email" class="form-control" name="email"
+                  placeholder="Your Email" required>
+              </div>
+
+              <div class="col-md-12">
+                <input type="text" class="form-control" name="subject"
+                  placeholder="Subject" required>
+              </div>
+
+              <div class="col-md-12">
+                <textarea class="form-control" name="message" rows="6"
+                  placeholder="Message" required></textarea>
+              </div>
+
+              <div class="col-md-12 text-center">
+                <div class="loading">Loading</div>
+                <div class="sent-message">Your message has been sent. Thank
+                  you!</div>
+
+                <input
+                  type="submit" data-wait="Please wait..."
+                  class="button primary w-button"
+                  value="Send Message" />
+              </div>
+
+            </div>
+          </form><!-- End Contact Form -->
+
+        </div>
+
+      </section><!-- /Contact Section -->
+
+    </main>
+
+    <footer id="footer" class="footer dark-background">
       <div class="container">
-        <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">themaxpa</strong> <span>All Rights Reserved</span>
+        <h3 class="sitename">angeliadwig</h3>
+        <p>Your Vision, Our Creation.</p>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08"
+            title="Twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/" title="facebook"><i
+              class="bi bi-facebook"></i></a>
+          <a
+            href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+            title="Instagram"><i class="bi bi-instagram"></i></a>
+          <a
+            href="https://www.snapchat.com/add/sharkyy02?share_id=lqRClWkt1_g&locale=en-IN"
+            title="snapchat"><i class="bi bi-snapchat"></i></a>
+          <a href="https://www.linkedin.com/" title="linkedin"><i
+              class="bi bi-linkedin"></i></a>
         </div>
-        <div class="credits">
-          Designed by <a href="https://themaxpa.com/">themaxpa</a>
+        <div class="container">
+          <div class="copyright">
+            <span>Copyright</span> <strong
+              class="px-1 sitename">themaxpa</strong> <span>All Rights
+              Reserved</span>
+          </div>
+          <div class="credits">
+            Designed by <a href="https://themaxpa.com/">themaxpa</a>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top"
+      class="scroll-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
-  <div id="preloader"></div>
+    <!-- Preloader -->
+    <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/typed.js/typed.umd.js"></script>
+    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-</body>
+  </body>
 
 </html>
