--- a/portfolio.html
+++ b/portfolio.html
@@ -254,11 +254,11 @@
       <h3 class="sitename">angeliadwig</h3>
       <p>Building Brands, One Pixel at a Time.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href="https://x.com/Angeliadg19?t=7vgTaA484v379fmpUEnXsA&s=08" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/" title="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/angeliadwig?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" title="Instagram"><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.snapchat.com/add/sharkyy02?share_id=lqRClWkt1_g&locale=en-IN" title="snapchat"><i class="bi bi-snapchat"></i></a>
+        <a href="https://www.linkedin.com/" title="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
