--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
               </div>
             </div><!-- End Info Item -->
 
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
               <div class="info-item d-flex align-items-center"
                 data-aos="fade-up" data-aos-delay="500">
                 <i class="icon bi bi-share flex-shrink-0"></i>
@@ -147,7 +147,7 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End Info Item -->
+            </div>End Info Item -->
 
           </div>
           <form action="https://api.web3forms.com/submit" method="POST"
@@ -177,11 +177,9 @@
               <textarea name="message" class="form-control" rows="6"
                 placeholder="Message" required></textarea>
             </div>
-        
             <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-              <input type="submit" class="button primary w-button">Send Message</input> <!-- Use a <button> for submit -->
+              <div >Your message has been sent. Thank you!</div>
+              <input type="submit" value="Send Message" class="button primary w-button"></input> 
             </div>
           </div>
         </form><!-- End Contact Form -->
