--- a/about.html
+++ b/about.html
@@ -114,8 +114,7 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Highly creative and motivated marketing specialist with a passion for building brands and connecting with target audiences. A strong communicator and collaborator, with a knack for developing innovative marketing strategies that deliver measurable results. Seeking a challenging role where I can leverage my skills and experience to contribute to the growth and success of a dynamic organization. A fast learner with a strong desire to continue growing and developing my marketing expertise
             </p>
           </div>
         </div>
